Attempting to fix navbar, added collapsable button

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ div.gallery:hover {
 
 div.gallery img {
   width: 100%;
-  height: auto;
+  height: auto; 
 }
 
 div.desc {
@@ -26,18 +26,26 @@ div.desc {
   width: 24.99999%;
 }
 
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+/*
 @media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
-}
+} */
 
 @media only screen and (max-width: 500px) {
   .responsive {
     width: 100%;
   }
-}
+} 
 
 .clearfix:after {
   content: "";
